<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetallesCiudad">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNCiudad" />

            <EditText
                android:id="@+id/txtNCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTiempo" />

            <Spinner
                android:id="@+id/spinnerTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTempMax" />

            <EditText

                android:id="@+id/txtTempMax"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="number"
                android:text="0  ºC" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ºC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTempMin" />

            <EditText
                android:id="@+id/txtTempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0 ºC" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ºC" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblLluvia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLluvia" />

            <EditText
                android:id="@+id/txtLluvia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0 mm" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mm" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblViento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblViento" />

            <EditText
                android:id="@+id/txtViento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="0 Km/h" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Km/h" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnGuardarPrediccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarPrediccion" />

</LinearLayout>